--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,20 +1,23 @@
-environment:
-  nodejs_version: "20.11.0"
+image: Ubuntu1804  # образ для сборки
+
+stack: node 20  # окружение
 
 branches:
   only:
     - master  # ветка git
-    - main
 
 cache: node_modules  # кеширование
 
 install:
-  - yarn install  # команда установки зависимостей
+  - npm install  # команда установки зависимостей
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - yarn build   # команда сборки
+  - npm run build   # команда сборки
+
+test_script:
+  - npm run lint && npm test  # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
@@ -22,4 +25,3 @@ deploy_script:  # скрипт развёртывания
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx push-dir --dir=dist --branch=gh-pages --force --verbose
-  
