--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,10 @@ image: Visual Studio 2022  # образ для сборки
 
 stack: node 20  # окружение
 
+environment:
+  my_variable:
+    secure: LN1Zq7+ToR76VdY3J4vG52yTOyUK4GWHrfdZHQhrpz27J02wShA1ETDXkAYEcot9
+
 branches:
   only:
     - master  # ветка git
