--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,10 +2,6 @@ image: Visual Studio 2022  # образ для сборки
 
 stack: node 20  # окружение
 
-environment:
-  my_variable:
-    secure: LN1Zq7+ToR76VdY3J4vG52yTOyUK4GWHrfdZHQhrpz27J02wShA1ETDXkAYEcot9
-
 branches:
   only:
     - main  # ветка git
@@ -13,15 +9,15 @@ branches:
 cache: node_modules  # кеширование
 
 install:
-  - npm install  # команда установки зависимостей
+  - yarn install  # команда установки зависимостей
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - npm run build   # команда сборки
+  - yarn build   # команда сборки
 
 test_script:
-  - npm run lint  # скрипт тестирования
+  - yarn lint  # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
